syntax = "proto3";

package protos;

message ClassificationModel{
  string model_name = 1;
  uint32 num_classes =2;
}
